[gd_scene load_steps=5 format=3 uid="uid://bq8ujsbmayllg"]

[ext_resource type="Script" path="res://Scripts/ThreeHitter.gd" id="1_hrt73"]
[ext_resource type="PackedScene" uid="uid://dwskcd6nh751f" path="res://Scenes/Robbie.tscn" id="1_wl1r3"]
[ext_resource type="PackedScene" uid="uid://ck5iyeqefbgyc" path="res://Scenes/EnemyGun.tscn" id="4_sfktj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s5lme"]
size = Vector2(31, 39)

[node name="ThreeHitter" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(1.5, 1.5)
collision_layer = 4
collision_mask = 5
script = ExtResource("1_hrt73")

[node name="Robbie" parent="." instance=ExtResource("1_wl1r3")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, -1.5)
shape = SubResource("RectangleShape2D_s5lme")
debug_color = Color(3.46541e-06, 0.690906, 0.804784, 0.42)

[node name="GroundRayRight" type="RayCast2D" parent="."]
position = Vector2(16, 0)
target_position = Vector2(10, 40)
collide_with_areas = true

[node name="GroundRayLeft" type="RayCast2D" parent="."]
position = Vector2(-20, -1)
target_position = Vector2(-10, 40)
collide_with_areas = true

[node name="EnemyGun" parent="." instance=ExtResource("4_sfktj")]
show_behind_parent = true
position = Vector2(-1, 0)

[node name="LeftWallRay" type="RayCast2D" parent="."]
target_position = Vector2(-40, 0)
collision_mask = 5
collide_with_areas = true

[node name="RightWallRay" type="RayCast2D" parent="."]
target_position = Vector2(40, 0)
collision_mask = 5
collide_with_areas = true

[connection signal="kill" from="." to="." method="_on_kill"]
